samples/_failures_safe/1761183329_f6a11b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47b95a27.c:129: error: expected ‘;’, ‘,’ or ‘)’ at end of input
